# texas-holdem

./: .gitignore  Cargo.toml  README.md
texas-holdem-client/: Cargo.toml
texas-holdem-client/assets/textures/: poker-cards.aseprite  table.aseprite
texas-holdem-client/src/: lobby.rs  main.rs  network.rs  play.rs  room.rs  table.rs  ui.rs
texas-holdem-common/: Cargo.toml
texas-holdem-common/src/: channel.rs  lib.rs  util.rs
texas-holdem-server/: Cargo.toml
texas-holdem-server/src/: lobby.rs  main.rs  network.rs  play.rs  room.rs
