[package]
name = "texas-holdem-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
texas-holdem-common ={ path = "../texas-holdem-common" }
bevy = "0.10"
bevy_renet = "0.0.7"
serde_json = "1.0.96"